Fixed word wrap

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -5,6 +5,10 @@
 	font-family: "Montserrat";
 }
 
+#button-div {
+	text-align: center;
+}
+
 #tweets {
 	border-style: solid;
 	border-width: 2px;
@@ -15,22 +19,25 @@
 	font-family: "Times New Roman";
 }
 
+.tweet-link {
+	text-decoration: none;
+}
+
 .tweet {
-	display: inline-block;
-	padding-top:24px;
-	padding-bottom:20px;
+	display: inline-grid;
+	grid-template-areas: "user-grid content-grid";
 	color: black;
+	padding: 20px;
 }
 
 .user-div {
-	display: inline-block;
-	width: 240px;
 	text-align: center;
+	grid-area: user-grid;
+	width: 220px;
 }
 
 .profile-image {
-	width: 40%;
-	height: 40%;
+	width: 84px;
 }
 
 .display-name {
@@ -44,14 +51,13 @@
 }
 
 .content-div {
-	float: right;
-	margin
+	grid-area: content-grid;
 }
 
 .date {
 	font-style: italic;
 	font-size: 16px;
-	margin-top: 64px;
+	margin-top: 48px;
 }
 
 .message {
@@ -67,4 +73,3 @@
 .even-row {
 	background-color:#e9e9e9;
 }
-
